# krog

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CPM.cmake  Dependencies.cmake  FindFFMPEG.cmake  dependencies.cmake
cmake/includes/: kr_appname.h.in
cmake/toolchains/: Windows.Clang.toolchain.cmake
lib/: CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
src/: CMakeLists.txt  pch.h
src/krog/: application.cc  application.cpp  application.h  common.cpp  common.h  entry.h  export.h
src/krog/events/: event.cc  event.h  eventbus.cc  eventbus.h  windowevents.cc  windowevents.h
src/krog/renderer/: buffer.cc  buffer.h  formats.cc  formats.h  image.cc  image.h  imagestream.cc  imagestream.h  texture.cc  texture.h  window.cc  window.h
src/krog/ui/: imguilayer.cc  imguilayer.cpp  imguilayer.h  layer.cc  layer.cpp  layer.h
src/krog/ui/misc/: imgui_spectrum.cc  imgui_spectrum.cpp  imgui_spectrum.h  ttf_codicon.h  ttf_sfprotext.h
src/krog/util/: framesynchronizer.cc  framesynchronizer.h  imageloader.cpp  imageloader.h  loggable.cc  loggable.h  persistentconfig.cc  persistentconfig.cpp  persistentconfig.h  threadwrapper.cc  threadwrapper.cpp  threadwrapper.h
src/krog/video/: avcapture.cc  avcapture.cpp  avcapture.h  capture.cc  capture.cpp  capture.h
test/: CMakeLists.txt  layers_entry.cc
